스프린트 5기 위클리 미션 (2주차) 리뷰 피드백 - z-index 변수 설정 - index.css 파일명 수정 (main.css) - gnb position:fixed로 변경 - 로그인/회원가입 관련 네이밍 수정 (auth.css) - <a>태그로 감싼 button 수정 (<button>태그 삭제 <a>태그에 스타일 설정) - 본문 컨텐츠 영역 클래스명 변경(left/right -> txt/img) - button관련 css파일 분리 (button.css)

--- a/week2/static/css/common.css
+++ b/week2/static/css/common.css
@@ -10,6 +10,8 @@
     --Linkbrary-gray10: #E7EFFB;
     --Grey-Light: #F5F5F5;
     --Linkbrary-bg: #F0F6FF;
+    --z-top: 1000;
+    --z-above: 100;
 }
 
 html {
@@ -21,34 +23,6 @@ html {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Pretendard';
-}
-
-/* 버튼 */
-.primary-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.625rem; /* 10px; */
-    padding: 1rem 1.25rem; /* 16px 20px; */
-    border-radius: 0.5rem; /* 8px; */
-    background: linear-gradient(91deg, var(--Linkbrary-primary-color) 0.12%, #6AE3FE 101.84%);
-    border: none;
-    color: var(--Grey-Light);
-    font-size: 1.125rem; /* 18px; */
-    font-weight: 600;
-    cursor: pointer;
-}
-
-.primary-btn.sm {
-    width: 8rem; /* 128px; */
-}
-
-.primary-btn.md {
-    width: 21.875rem; /* 350px; */
-}
-
-.primary-btn.lg {
-    width: 25rem; /* 400px; */
 }
 
 .cursor-point {
